src/app/globals.css
@font-face {
  font-family: 'Miller';
  src: url('@/../../../public/fonts/MillerTextRoman.otf');
}
@font-face {
  font-family: 'AktivGrotesk';
  font-weight: normal;
  src: url('@/../../../public/fonts/AktivGrotesk-Light.ttf');
  font-style: normal;
}
@font-face {
  font-family: 'AktivGrotesk';
  font-weight: normal;
  src: url('@/../../../public/fonts/AktivGrotesk-LightItalic.ttf');
  font-style: italic;
}
@font-face {
  font-family: 'AktivGrotesk';
  font-weight: bold;
  src: url('@/../../../public/fonts/AktivGrotesk-Medium.ttf');
  font-style: normal;
}
@font-face {
  font-family: 'AktivGrotesk';
  font-weight: bold;
  src: url('@/../../../public/fonts/AktivGrotesk-MediumItalic.ttf');
  font-style: italic;
}

html,
body {
  max-width: 100vw;
  /* overflow: hidden; */
}
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: underline;
}
h1,h2,h3,h4,h5,h6{
  font-size: 30px;
  font-family: 'Miller';
  /* letter-spacing: 0; */
  font-weight: normal;
}
span, a{
  font-family: 'AktivGrotesk';
}
@media(max-width: 1000px){
  h1,h2,h3,h4,h5,h6{
    font-size: 30px;
  }
}
.parent-container:has(.intro-container.inactive) .slideshow-container{
  opacity: 1; 
  transition: 1.5s ease-in;
  transition-delay: 1.5s;
}
@media(max-width: 1000px){
  html,
  body {
    max-width: 100vw;
    overflow-x: hidden;
  }
  .parent-container .slideshow-container{
    opacity: 1; 
    transition: 1.5s ease-in;
    transition-delay: 1.5s;
  }
  .parent-container:has(.intro-container.inactive) .slideshow-container{
    transition: none;
  }
}

